@@ -26,8 +26,8 @@ $moduleDirNameUpper = \mb_strtoupper($moduleDirName);
 // ------------------- Informations ------------------- //
 $modversion = [
     'version'             => '1.2.0',
-    'module_status'       => 'RC2',
-    'release_date'        => '2021/04/19',
+    'module_status'       => 'Stable',
+    'release_date'        => '2023/04/28', // format: yyyy/mm/dd
     'name'                => \_MI_WGGALLERY_NAME,
     'description'         => \_MI_WGGALLERY_DESC,
     'author'              => 'Wedega',
@@ -56,7 +56,7 @@ $modversion = [
     'support_name'        => 'Wedega - Webdesign Gabor',
     'module_website_url'  => 'https://xoops.wedega.com',
     'module_website_name' => 'Wedega XOOPS Demo Site',
-    'release'             => '19/04/2021',
+    'release'             => '28/02/2023',
     'system_menu'         => 1,
     'hasAdmin'            => 1,
     'hasMain'             => 1,
