@@ -1,3 +1,7 @@
+<h5>1.2.0 Stable</h5>  [2023/02/28]
+<hr>
+ - moved to last stable with smarty 2 (goffy)
+
 <h5>1.2.0 RC2</h5>  [2022/09/27]
 <hr>
 - added support of tag module (alain01/goffy)
